--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "out/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "test": "jest",
     "test:watch": "jest --watch",
     "release": "release-it"
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "jest": "^29.0.3",
     "release-it": "^15.4.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
@@ -27,5 +28,10 @@
   },
   "files": [
     "out"
-  ]
+  ],
+  "homepage": "https://github.com/clovery/dumu",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/clovery/dumu.git"
+  }
 }
