--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "out/index.js",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf out && tsc",
     "test": "jest",
     "test:watch": "jest --watch",
     "release": "release-it"
