--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "ArvinWei",
   "license": "ISC",
   "devDependencies": {
+    "@types/is-base64": "^1.1.1",
     "@types/jest": "^29.0.3",
     "dotenv": "^16.0.3",
     "jest": "^29.0.3",
@@ -24,7 +25,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "is-base64": "^1.1.0"
   },
   "files": [
     "out"
