--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^29.0.3",
     "dotenv": "^16.0.3",
     "jest": "^29.0.3",
+    "mime": "^3.0.0",
     "release-it": "^15.4.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.1",
